--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@tanstack/react-table": "^8.21.3",
     "ai": "^5.0.47",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
