--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "nestjs-minio-client": "^2.2.0",
     "openai": "^5.20.2",
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.3",
@@ -61,6 +62,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
