--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "minio": "^8.0.6",
     "nestjs-minio-client": "^2.2.0",
     "openai": "^5.20.2",
     "pdf-parse": "^1.1.1",
