--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,21 @@ services:
             - 5432:5432
         env_file:
             - ./backend/.env.postgres
+        volumes:
+            - pdata:/var/lib/postgresql/data
+
+    minIO:
+        image: minio/minio
+        container_name: minio
+        ports:
+            - 9000:9000
+            - 9090:9090
+        environment:
+            - MINIO_CONFIG_ENV_FILE=/etc/config.env
+        volumes:
+            - ./backend/uploads/:/mnt/data
+            - ./backend/minio/config.env:/etc/config.env
+        command: server --console-address ":9090"
 
     pgadmin:
         image: dpage/pgadmin4:9.8.0
@@ -39,3 +54,11 @@ services:
             - 80:80
         env_file:
             - ./backend/.env.postgres
+        volumes:
+            - pgdata:/var/lib/postgresql/data
+
+volumes:
+    postgres:
+        name: pdata
+    postgres-admin:
+        name: pgdata
